[package]
name = "quic-quinn"
version = "0.1.0"
authors = ["iavian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }

[build-dependencies]
bindgen = "0.53.1"
